--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
-build
-dist
+*.py[cod]
+
+# C extensions
+*.so
+
+# Environment files
+*.env
+
+# Installer logs
+pip-log.txt
+
+# Packages
+*.egg
 *.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+# Virtual environment
+venv
